--- a/PBO_Imanuel.csproj
+++ b/PBO_Imanuel.csproj
@@ -149,6 +149,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="Assets\bg.jpg" />
+    <Content Include="Assets\logo.png" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
