--- a/PBO_Imanuel.csproj
+++ b/PBO_Imanuel.csproj
@@ -152,6 +152,7 @@
     <Content Include="Assets\bg.jpg" />
     <Content Include="Assets\logo.png" />
     <Content Include="Assets\logo2.png" />
+    <Content Include="Delete.aspx" />
     <Content Include="Ubah.aspx" />
     <Content Include="Tambah.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
@@ -311,6 +312,15 @@
       <DependentUpon>About.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controller\MobilDB.cs" />
+    <Compile Include="Delete.aspx.cs">
+      <DependentUpon>Delete.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Delete.aspx.designer.cs">
+      <DependentUpon>Delete.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Model\Mobil.cs" />
     <Compile Include="Ubah.aspx.cs">
       <DependentUpon>Ubah.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
